made some modifications

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -3,37 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soccer Insights</title>
+    <title>Job Updates and Opportunities</title>
 </head>
 <body>
-    <center><h1>Welcome to Soccer Insights</h1></center>
+    <center><h1>Latest Job Updates</h1></center>
     <hr>
-    <h2>Latest News</h2>
-    <p>Discover the latest trends in soccer, from player transfers to game tactics.<br/></p>
-    <h3>Featured Player</h3>
-    <p>Learn more about Lionel Messi's incredible career and achievements.</p>
-    <h4>Upcoming Matches</h4>
-    <blockquote cite="http://example.com/famous-quotes">
-        "The most effective way to do it, is to do it." - Amelia Earhart
+    <h2>Recent Postings</h2>
+    <p>Stay updated with the latest job openings in technology, healthcare, and finance.<br/></p>
+    <h3>Technology Sector</h3>
+    <p>Explore opportunities in software development, data science, and cybersecurity.</p>
+    <h4>Healthcare Jobs</h4>
+    <blockquote>
+        "The most difficult thing is the decision to act, the rest is merely tenacity." - Amelia Earhart
     </blockquote>
     <hr>
     <center>
-        <img src="profile.jpg" alt="Profile Photo of Soccer Star" height="300">
+        <img src="ravaliravs.jpg" alt="Ravali" height="300">
     </center>
-    <p>Check out <a href="https://www.fifa.com">FIFA's official website</a> for more info.</p>
-    <p>Visit our <a href="https://www.uefa.com" target="_blank">UEFA page</a> to see European football events.</p>
+    <p>Check out <a href="https://www.linkedin.com">LinkedIn</a> for networking and job listings.</p>
+    <p>Visit <a href="https://www.indeed.com" target="_blank">Indeed</a> to apply directly to posted jobs.</p>
 
-    <h2>Learn About Soccer</h2>
+    <h2>Application Tips</h2>
     <ul>
-        <li>History of Soccer</li>
-        <li>Rules of the Game</li>
+        <li>Resume Building</li>
+        <li>Interview Preparation</li>
     </ul>
 
-    <h2>Choose Your Favorite League</h2>
+    <h2>Select Your Industry of Interest</h2>
     <select>
-        <option value="epl">English Premier League</option>
-        <option value="laliga">La Liga</option>
-        <option value="seriea">Serie A</option>
+        <option value="technology">Technology</option>
+        <option value="healthcare">Healthcare</option>
+        <option value="finance">Finance</option>
     </select>
 
     <h2>My Hobbies</h2>
@@ -46,21 +46,21 @@
         <tr>
             <td>John Doe</td>
             <td>Fishing</td>
-            <td>September 2021</td>
+            <td>September 2023</td>
         </tr>
         <tr>
             <td>Jane Doe</td>
             <td>Windsurfing</td>
-            <td>July 2022</td>
+            <td>July 2024</td>
         </tr>
         <tr>
             <td>Jim Beam</td>
             <td>Playing Volleyball</td>
-            <td>August 2022</td>
+            <td>August 2024</td>
         </tr>
     </table>
 
     <!-- This is a comment: The following section summarizes the content of the webpage. -->
-    <p>This page is about soccer, featuring various information on the sport, from history to current events.</p>
+    <p>This page provides updated information about job opportunities across various industries, along with useful tips for job seekers.</p>
 </body>
 </html>
