--- a/lab1/index.html
+++ b/lab1/index.html
@@ -39,24 +39,24 @@
     <h2>My Hobbies</h2>
     <table border="1">
         <tr>
-            <th>Name</th>
             <th>Hobby</th>
-            <th>Last Activity</th>
+            <th>favourite </th>
+            <th>last Activity</th>
         </tr>
         <tr>
-            <td>John Doe</td>
-            <td>Fishing</td>
-            <td>September 2023</td>
+            <td>playing with children</td>
+            <td>especially cute little babies </td>
+            <td>yesterday</td>
         </tr>
         <tr>
-            <td>Jane Doe</td>
-            <td>Windsurfing</td>
-            <td>July 2024</td>
+            <td>Reading</td>
+            <td>gives peace</td>
+            <td>2 days back</td>
         </tr>
         <tr>
-            <td>Jim Beam</td>
-            <td>Playing Volleyball</td>
-            <td>August 2024</td>
+            <td>trying out new food</td>
+            <td>specially veg and street food</td>
+            <td>a week ago</td>
         </tr>
     </table>
 
